--- a/example/CMakelists.txt
+++ b/example/CMakelists.txt
@@ -4,9 +4,9 @@ set(CMAKE_CXX_FLAGS "-Wall -O0 -g -std=c++11" )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../protobuf-3.11.3/src)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../protobuf/src)
 
-link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../protobuf-3.11.3/src/.libs)
+link_directories(${CMAKE_CURRENT_SOURCE_DIR}/../protobuf/src/.libs)
 
 set(EX1_SRC_LIST example1.cpp addressbook.pb.cc)
 
