--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -6,4 +6,4 @@ set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/build)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/example)
 
-# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/test)
